--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
             <!-- logo div -->
             <div class="m2">
 
-                <a href="./Main.html" class="a1"><img src="./download.jpeg" id="p1">FUJI market</a>
+                <a href="./index.html" class="a1"><img src="./download.jpeg" id="p1">FUJI market</a>
                 <!-- <a href="./Main.html" class="a2">FUJI market</a> -->
             </div>
             <!-- contents -->
             <div class="m3">
                 <ul>
-                    <li><a href="./Main.html"><img src="./home.png" id="p2"></a></li>
+                    <li><a href="./index.html"><img src="./home.png" id="p2"></a></li>
                     <li class="l1"><a href="./signup.html" class="a3">Sign up</a></li>
                     <li><a href="./login.html"><img src="./enter.png" id="p2"></a></li>
                     <li><a href="./profile.html"><img src="./user.png" id="p2"></a></li>
