--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <!-- logo div -->
             <div class="m2">
 
-                <a href="./main.html" class="a1"><img src="./download.jpeg" id="p1">FUJI market</a>
+                <a href="index.html" class="a1"><img src="./download.jpeg" id="p1">FUJI market</a>
                 <!-- <a href="./Main.html" class="a2">FUJI market</a> -->
             </div>
             <!-- contents -->
